initial changes, incl. post-CSS learnings

--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -5,14 +5,14 @@
           <ul>
             <li>
                 <a href="https://appseed.us/apps/flask-apps/flask-material-kit">
-                  Flask Material Kit
+                  Product visual search
                 </a>
             </li>
           </ul>
         </nav>
         <div class="copyright float-right">
           &copy;
-          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> - Coded by AppSeed.
+          <a href="https://www.creative-tim.com" target="_blank">alexblg</a> - Coded by Alexandre Boulenger
         </div>
       </div>
   </footer>
