--- a/app/templates/includes/footer-fullscreen.html
+++ b/app/templates/includes/footer-fullscreen.html
@@ -4,15 +4,15 @@
               <nav class="float-left">
                 <ul>
                   <li>
-                    <a href="https://appseed.us/apps/flask-apps/flask-material-kit">
-                      Flask Material Kit
+                    <a href="/search.html">
+                      Product visual semantic search
                     </a>
                   </li>
                 </ul>
               </nav>
               <div class="copyright float-right">
                 &copy;
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> - Coded by AppSeed.
+                <a href="https://www.creative-tim.com" target="_blank">alexblg</a> - Coded by Alexandre Boulenger.
               </div>
         </div>
     </footer>
