create results page

--- a/app/templates/pages/search.html
+++ b/app/templates/pages/search.html
@@ -30,7 +30,10 @@
         </div>
 
         <div class="text-center" style="margin-top: 25px">
-          <button type="submit" name="login" class="btn btn-primary">Search</button>
+          <a href="/results" name="search" class="btn btn-primary">
+          Search
+          </a>
+          <!--button type="submit" name="search" class="btn btn-primary">Search</button-->
         </div>
 
       </form>
