--- a/app/templates/pages/results.html
+++ b/app/templates/pages/results.html
@@ -19,7 +19,7 @@
         <div class="tab-pane active text-center gallery" id="studio">
           <div class="row">
             <div class="col-md-3 ml-auto">
-              <img src="/static/assets/img/examples/studio-1.jpg" class="rounded">
+              <img src="C:/Users/alexa/Documents/data/wir/project/raffineurs/1033-8975-large_default-mug-egoist-feminisit-anarchist-pessimist-optimist.jpg" class="rounded">
               <img src="/static/assets/img/examples/studio-2.jpg" class="rounded">
             </div>
             <div class="col-md-3 mr-auto">
