--- a/app/templates/pages/results.html
+++ b/app/templates/pages/results.html
@@ -14,39 +14,33 @@
   <div class="profile-content">
     <div class="container">
       <div class="row">
-      </div>
       <div class="tab-content tab-space">
         <div class="tab-pane active text-center gallery" id="studio">
+          
           <div class="row">
-            <div class="col-md-3 ml-auto">
-              <img src="C:/Users/alexa/Documents/data/wir/project/raffineurs/1033-8975-large_default-mug-egoist-feminisit-anarchist-pessimist-optimist.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-2.jpg" class="rounded">
-            </div>
-            <div class="col-md-3 mr-auto">
-              <img src="/static/assets/img/examples/studio-5.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-4.jpg" class="rounded">
-            </div>
-          <div class="row">
-            <div class="col-md-3 ml-auto">
-              <img src="/static/assets/img/examples/studio-1.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-2.jpg" class="rounded">
-            </div>
-            <div class="col-md-3 mr-auto">
-              <img src="/static/assets/img/examples/studio-5.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-4.jpg" class="rounded">
-            </div>
+          {%for imgs in range(0,len,3)%} 
+            <!--div class="row">
+              <div class="col-md-3 ml-auto">
+                <img src="/static/prod_images/{{img}}" class=" rounded" style='max-height: 300px;'>
+              </div-->
+              <!--div class="col-md-3 mr-auto">
+                <img src="/static/assets/img/examples/studio-5.jpg" class="rounded">
+                <img src="/static/assets/img/examples/studio-4.jpg" class="rounded"-->
+              <!--/div>
+            </div-->
+            {%for img in [imgs,imgs+1,imgs+2]%}
+              <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="/static/prod_images/{{res[img]}}" class=" rounded" alt="Lights" style="width:100%">
+                    <div class="caption">
+                      <p>Lorem ipsum...</p>
+                    </div>
+                </div>
+              </div>
+            {%endfor%}  
+          {%endfor%}
           </div>
-          <div class="row">
-            <div class="col-md-3 ml-auto">
-              <img src="/static/assets/img/examples/studio-1.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-2.jpg" class="rounded">
-            </div>
-            <div class="col-md-3 mr-auto">
-              <img src="/static/assets/img/examples/studio-5.jpg" class="rounded">
-              <img src="/static/assets/img/examples/studio-4.jpg" class="rounded">
-            </div>
-          </div>
-          </div>
+          
         </div>
       </div>
     </div>
