further visual changes: favicon, background, search icon, footer issue, etc.

--- a/app/templates/includes/footer-fullscreen.html
+++ b/app/templates/includes/footer-fullscreen.html
@@ -12,7 +12,7 @@
               </nav>
               <div class="copyright float-right">
                 &copy;
-                <a href="https://www.creative-tim.com" target="_blank">alexblg</a> - Coded by Alexandre Boulenger.
+                <a href="http://github.com/alexblg/" target="_blank">alexblg</a>
               </div>
         </div>
     </footer>
