--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -4,15 +4,15 @@
         <nav class="float-left">
           <ul>
             <li>
-                <a href="https://appseed.us/apps/flask-apps/flask-material-kit">
-                  Product visual search
-                </a>
+                <a href="/search.html">
+                      Product visual semantic search
+                    </a>
             </li>
           </ul>
         </nav>
         <div class="copyright float-right">
           &copy;
-          <a href="https://www.creative-tim.com" target="_blank">alexblg</a> - Coded by Alexandre Boulenger
+          <a href="http://github.com/alexblg/" target="_blank">alexblg</a>
         </div>
       </div>
   </footer>
