--- a/app/templates/layouts/base-site-fullscreen_self.html
+++ b/app/templates/layouts/base-site-fullscreen_self.html
@@ -19,7 +19,7 @@
  <head>
    <meta charset="utf-8" />
    <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
+   <link rel="icon" type="image/png" href="/static/assets/img/favicon.svg">
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <title>
        Product visual semantics — {% block title %}{% endblock %}
@@ -42,7 +42,7 @@
  
    <!-- {% include 'includes/navigation.html' %}  -->
  
-   <div class="page-header header-filter" style="background-image: url('/static/assets/img/bg7.jpg'); background-size: cover; background-position: top center;">
+   <div class="page-header header-filter" style="background-image: url('/static/assets/img/bg.png'); background-size: cover; background-position: top center;">
      <div class="container">
        <div class="row">
  
