--- a/app/templates/pages/search.html
+++ b/app/templates/pages/search.html
@@ -14,8 +14,9 @@
         
         {{ form.hidden_tag() }}
 
-        <div class="card-header card-header-primary text-center" style="padding-bottom: 30px;">
-          <h4 class="card-title">Product visual semantic search</h4>
+        <div class="card-header text-center" style="padding: 5px;">
+          <h4 class="card-title">Search products</h4>
+          <p class="category">Using visual semantics</p>
         </div>
 
         <p class="description text-center">
@@ -28,16 +29,16 @@
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">
-                <i class="material-icons">face</i>
+                <i class="material-icons">search</i>
               </span>
             </div>
-            {{ form.query(class="form-control", placeholder="What product are you looking for?") }}
+            {{ form.query(class="form-control", placeholder="What product are you looking for?", rows="1") }}
             </div>
         </div>
 
         <div class="text-center" style="margin-top: 25px">
           <!--a href="/results" name="search" class="btn btn-primary">Search</a-->
-          <button type="submit" name="search" class="btn btn-primary">Search</button>
+          <button type="submit" name="search" class="btn">Search</button>
         </div>
 
       </form>
